src/components/App/styles.module.scss
@use '../../styles/_mixins.scss' as mixins;

.wrapper {
  background: var(--color--background);

  .content {
    display: flex;
    flex-direction: column;
    max-width: 1440px;
    min-height: 100vh;
    border-left: 1px solid var(--color--line);
    border-right: 1px solid var(--color--line);
    margin: 0 auto;
    padding-top: 170px;
    position: relative;

    @media (max-width: 992px) {
      padding-top: 100px;
    }

    @media (max-width: 768px) {
      padding-top: 59px;
    }

    .titleWrapper {
      display: flex;
      justify-content: flex-start;
      margin-bottom: 35%;

      .title {
        margin-left: 75px;
        @include mixins.title;

        @media (max-width: 768px) {
          font-size: 32px;
          margin-left: 20px;
        }

        @media (max-width: 320px) {
          font-size: 20px;
        }

      }

      @media (max-width: 768px) {
        margin-bottom: 5%;
      }
    }

    .circleButtons {
      margin-left: 75px;
      flex: 1;
      .text {
        @include mixins.font-PTSans-property($font-size: 14);
        margin-bottom: 20px;
      }

      .group {
        display: flex;
        gap: 20px;

        @media (max-width: 768px) {
         gap: 8px;
        }

        .button {
          display: flex;
          align-items: center;
          justify-content: center;
          color: var(--color--text);
          border: 1px solid var(--color--button);
          width: 50px;
          height: 50px;
          border-radius: 50%;
          background-color: transparent;
          cursor: pointer;

          &:hover {
            background-color: var(--color-hover);
          }

          &:disabled {
            border: 1px solid var(--color--button-disabled);
          }

          @media (max-width: 768px) {
            width: 25px;
            height: 25px;
          }
        }
      }

      @media (max-width: 768px) {
        margin-left: 20px;
      }

      @media (max-width: 576px) {
        position: absolute;
        bottom: 2.5rem;
      }

    }

    .slider {
      width: 100%;
      margin-top: auto;
      padding: 56px 75px 104px 75px;

      @media (max-width: 768px) {
        padding: 0 20px;
      }

      .sliderItem {
        height: 135px;
        .subTitle {
          margin-bottom: 15px;
          @include mixins.sub_title;
        }

        .description {
          @include mixins.description;
        }
      }
    }

    .bg {
      .numbersWrapper {
        display: flex;
        justify-content: center;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        gap: 125px;

        @media (max-width: 1200px) {
          gap: 50px;
        }

        @media (max-width: 320px) {
          gap: 30px;
        }

        .dateStart {
          @include mixins.date(var(--color-start-number));
        }

        .dateEnd {
          @include mixins.date(var(--color-end-number));
        }

        .dateEnd, .dateStart{
          @media (max-width: 1200px) {
            font-size: 15vw;
          }
          @media (max-width: 320px) {
            font-size: 56px;
          }
        }

        @media (max-width: 576px) {
          top: 30%;
          left: 50%;
          transform: translate(-50%, 0%);
          &:after{
            content: '';
            border: 1px solid var(--color--line);
            position: absolute;
            width: 100%;
            bottom: -150px;
            left: 0;
          }
        }
      }

      .circleWrapper {
        width: 536px;
        height: 530px;
        border-radius: 50%;
        border: 1px solid var(--color--line);
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 250;

        .item {
          cursor: pointer;
          width: 6px;
          height: 6px;
          border-radius: 50%;
          background-color: var(--color--text);
          z-index: 100;
        }

        .active {
          cursor: pointer;
          display: flex;
          width: 56px;
          height: 56px;
          border-radius: 50%;
          text-align: center;
          align-items: center;
          justify-content: center;
          background-color: var(--color--background);
          border: 1px solid var(--color--line);
          z-index: 100;
        }

        .circleTitle {
          position: absolute;
          left: 130%;
          @include mixins.font-PTSans-property(700, 20);
        }

        @media(max-width: 576px) {
          display: none;
        }
      }
    }

    &:after, &:before {
      content: '';
      border: 1px solid var(--color--line);
      top: 50%;
      left: 50%;
      position: absolute;

      @media(max-width: 576px) {
        display: none;
      }
    }

    &:before {
      transform: translate(-50%, -50%) rotate(90deg);
      width: calc(100vh - 2px);
    }

    &:after {
      transform: translate(-50%, -50%);
      width: 100%;
    }
  }

}

